<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/autoLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:src="@drawable/ic_launcher"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingTop="-20dp"
                android:text="@string/txtSignUp"
                android:textColor="@color/colorTextTitle"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/edtFirstName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <EditText
                android:id="@+id/edtFirstName"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/ic_textview"
                android:ems="10"
                android:hint="@string/txtFirstName"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:paddingRight="15dp"
                android:textAlignment="textStart"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/edtLastName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/edtLastName"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/ic_textview"
                android:ems="10"
                android:hint="@string/txtLastName"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:paddingRight="15dp"
                android:textAlignment="textStart"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/edtEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_textview"
                android:ems="10"
                android:hint="@string/txtEmail"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:textAlignment="textStart"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_textview"
                android:ems="10"
                android:hint="@string/txtPassword"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingRight="15dp"
                android:textAlignment="textStart"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

            <EditText
                android:id="@+id/edtRepeatPassword"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_textview"
                android:ems="10"
                android:hint="@string/txtRepeatPassword"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingRight="15dp"
                android:textAlignment="textStart"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

            <CheckBox
                android:id="@+id/checkTerms"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:text="@string/txtTerms"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtRepeatPassword" />

            <Button
                android:id="@+id/btnLoginEmail"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_login_email"
                android:padding="10dp"
                android:text="@string/btnSignUpEmail"
                android:textColor="#ffffff"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkTerms" />

            <TextView
                android:id="@+id/btnSignInBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txtSignIn"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLoginEmail" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>